--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,12 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.soarex16.doccommentrepl</id>
-    <name>doc-comment-repl</name>
+    <name>Doc Comment Repl</name>
     <vendor>soarex16</vendor>
+    <version>1.0.0</version>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>org.jetbrains.kotlin</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.soarex16.doccommentrepl.services.MyApplicationService"/>
@@ -15,4 +17,10 @@
         <listener class="com.github.soarex16.doccommentrepl.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
+    <actions>
+        <action id="com.github.soarex16.doccommentrepl.TestAction" class="com.github.soarex16.doccommentrepl.TestAction"
+                text="Run DOC REPL" description="Test action">
+            <add-to-group group-id="ToolsMenu" anchor="first"/>
+        </action>
+    </actions>
 </idea-plugin>
