--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -1,2 +1,2 @@
-name=My Plugin
-doccodecomment.tool.tip.text.execute=Execute snippet
+name=Doc Comment REPL
+doccodecomment.tool.tip.text.execute=Run as Scratch
