--- a/gradle.properties
+++ b/gradle.properties
@@ -8,16 +8,21 @@ pluginVersion = 0.0.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 203
+pluginSinceBuild = 212
 pluginUntilBuild = 213.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = IC
-platformVersion = 2020.3.4
+platformType = PC
+# 2020.3.4
+platformVersion = 2021.2.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = org.jetbrains.kotlin, com.intellij.java
+platformPlugins = PythonCore
+# , com.intellij.java
+# org.jetbrains.kotlin,
+#  , com.intellij.modules.python
+# ,
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
 javaVersion = 11
