--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,9 +6,13 @@
     <version>1.0.0</version>
 
     <depends>com.intellij.modules.platform</depends>
-    <depends>org.jetbrains.kotlin</depends>
+    <!--<depends>org.jetbrains.kotlin</depends>
     <depends>com.intellij.java</depends>
-<!--    <depends>com.intellij.modules.python</depends>-->
+    <depends>com.intellij.modules.python</depends>-->
+
+    <depends optional="true" config-file="python-plugin-part.xml">
+        com.intellij.modules.python
+    </depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <codeInsight.lineMarkerProvider id="DocComment.Kotlin.SampleLineMarkProvider"
