--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -1,3 +1,3 @@
 name=Doc Comment REPL
-doccodecomment.tool.tip.text.execute=Run as Scratch
+doccodecomment.tool.tip.text.execute=Execute code snippet
 doccodecomment.error.document.modified=Cannot execute code becasue document has been modified
