Add python into IC target

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,35 +5,15 @@
     <vendor>soarex16</vendor>
     <version>1.0.0</version>
 
+    <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
-    <depends>org.jetbrains.kotlin</depends>
     <depends>com.intellij.java</depends>
-<!--    <depends>com.intellij.modules.python</depends>-->
 
-    <extensions defaultExtensionNs="com.intellij">
-        <codeInsight.lineMarkerProvider id="DocComment.Kotlin.SampleLineMarkProvider"
-                                        implementationClass="com.github.soarex16.doccommentrepl.markers.KotlinSnippetRunnerLineMarkProvider"
-                                        language="kotlin"/>
+    <depends optional="true" config-file="com.github.soarex16.doccommentrepl-kotlinPart.xml">
+        org.jetbrains.kotlin
+    </depends>
 
-        <codeInsight.lineMarkerProvider id="DocComment.Python.SampleLineMarkProvider"
-                                        implementationClass="com.github.soarex16.doccommentrepl.markers.PythonSnippetRunnerLineMarkProvider"
-                                        language="Python"/>
-
-        <projectService serviceInterface="com.github.soarex16.doccommentrepl.repl.console.KotlinConsoleKeeper"
-                        serviceImplementation="com.github.soarex16.doccommentrepl.repl.console.KotlinConsoleKeeper"/>
-
-    </extensions>
-
-    <extensions defaultExtensionNs="org.jetbrains.kotlin">
-        <scriptDefinitionContributor id="ConsoleScriptDefinitionContributor"
-                                     implementation="com.github.soarex16.doccommentrepl.repl.console.ConsoleScriptDefinitionContributor"/>
-
-    </extensions>
-    <actions>
-        <action id="com.github.soarex16.doccommentrepl.actions.ReloadModuleAction"
-                class="com.github.soarex16.doccommentrepl.actions.ReloadModuleAction"
-                text="Reload doc REPL module" description="Test action" icon="AllIcons.Actions.Refresh">
-            <add-to-group group-id="ToolsMenu" anchor="first"/>
-        </action>
-    </actions>
+    <depends optional="true" config-file="com.github.soarex16.doccommentrepl-pythonPart.xml">
+        com.intellij.modules.python
+    </depends>
 </idea-plugin>
