--- a/gradle.properties
+++ b/gradle.properties
@@ -8,17 +8,21 @@ pluginVersion = 0.0.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 212
+pluginSinceBuild = 212.1.1
 pluginUntilBuild = 213.*
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
-platformType = PC
+platformType = IC
 # 2020.3.4
-platformVersion = 2021.2.3
+platformVersion = 2021.2
+
+platformDownloadSources=true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = PythonCore
+platformPlugins = com.intellij.java, org.jetbrains.kotlin
+pythonPlugin = PythonCore:212.4746.13
+# PythonCore
 # , com.intellij.java
 # org.jetbrains.kotlin,
 #  , com.intellij.modules.python
