--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -1,3 +1,6 @@
 name=Doc Comment REPL
 doccodecomment.tool.tip.text.execute=Execute code snippet
 doccodecomment.error.document.modified=Cannot execute code becasue document has been modified
+doccodecomment.error.generic=Error occured in Comment REPL plugin
+no.modules.were.found=No modules were found
+cannot.find.project=Cannot find project
