Change target IDEA

--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -4,3 +4,5 @@ doccodecomment.error.document.modified=Cannot execute code becasue document has 
 doccodecomment.error.generic=Error occured in Comment REPL plugin
 no.modules.were.found=No modules were found
 cannot.find.project=Cannot find project
+executing.snippet.title=Running snippet
+executing.snippet.error=Error running snippet
