--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -6,3 +6,5 @@ no.modules.were.found=No modules were found
 cannot.find.project=Cannot find project
 executing.snippet.title=Running snippet
 executing.snippet.error=Error running snippet
+executor.not.found=Cannot find appropriate  executor for this language
+parse.error=Snippet contains errors
