--- a/src/main/resources/messages/DocCommentReplBundle.properties
+++ b/src/main/resources/messages/DocCommentReplBundle.properties
@@ -8,3 +8,4 @@ executing.snippet.title=Running snippet
 executing.snippet.error=Error running snippet
 executor.not.found=Cannot find appropriate  executor for this language
 parse.error=Snippet contains errors
+doccodecomment.tool.tip.text.running=Executing snippet
